--- a/package.json
+++ b/package.json
@@ -18,15 +18,17 @@
   "homepage": "https://github.com/vgathziri/PesoSalud#readme",
   "dependencies": {
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
-    "dotenv": "^6.0.0"
+    "nodemon": "^1.18.4"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1"
+    "eslint-plugin-react": "^7.11.1",
+    "nodemon": "^1.18.4"
   }
 }
