--- a/package.json
+++ b/package.json
@@ -20,15 +20,13 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mysql": "^2.16.0",
-    "nodemon": "^1.18.4"
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-plugin-import": "^2.14.0",
     "eslint-plugin-jsx-a11y": "^6.1.1",
-    "eslint-plugin-react": "^7.11.1",
-    "nodemon": "^1.18.4"
+    "eslint-plugin-react": "^7.11.1"
   }
 }
