--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mysql": "^2.16.0",
-    "dotenv": "^6.0.0",
+    "dotenv": "^6.0.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
