--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
   },
   "homepage": "https://github.com/vgathziri/PesoSalud#readme",
   "dependencies": {
+    "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mysql": "^2.16.0",
-    "dotenv": "^6.0.0"
+    "mysql": "^2.16.0"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
