--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "circular-json": "^0.5.7",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
-    "mysql": "^2.16.0"
+    "mysql": "^2.16.0",
+    "nodemailer": "^4.6.8"
   },
   "devDependencies": {
     "eslint": "^5.5.0",
