--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "circular-json": "^0.5.7",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
+    "fs": "0.0.1-security",
+    "multer": "^1.4.1",
     "mysql": "^2.16.0"
   },
   "devDependencies": {
