--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bcrypt": "^3.0.1",
     "body-parser": "^1.18.3",
     "circular-json": "^0.5.7",
+    "cors": "^2.8.5",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "fs": "0.0.1-security",
